# grantpicks

./: .gitignore  README.md  prettier.config.js
near/contract/: Cargo.toml  README.md  package.json
near/contract/scripts/: build.sh  deploy.sh
near/contract/src/: applications.rs  constants.rs  deposits.rs  events.rs  lib.rs  payouts.rs  rounds.rs  source.rs  utils.rs  validation.rs  votes.rs
near/contract/tests/: rounds.rs  test_env.rs
stellar/: Cargo.toml  build.sh  deploy.testnet.sh  package-lock.json  package.json  pnpm-lock.yaml  round.wasm
stellar/.stellar/identity/: ebube.toml  potlock-testnet.toml
stellar/contract/: README.md
stellar/contract/lists/: Cargo.toml
stellar/contract/lists/src/: data_type.rs  error.rs  events.rs  internal.rs  lib.rs  lists_writer.rs  methods.rs  owner_writer.rs  registration_writer.rs  storage.rs  storage_key.rs  test.rs  upvotes_writer.rs  utils.rs  validation.rs
stellar/contract/project-registry/: Cargo.toml  README.md
stellar/contract/project-registry/src/: admin.rs  data_type.rs  error.rs  events.rs  internal.rs  lib.rs  methods.rs  project_writer.rs  storage.rs  storage_key.rs  test.rs  validation.rs
stellar/contract/round/: Cargo.toml  README.md
stellar/contract/round-factory/: Cargo.toml
stellar/contract/round-factory/src/: admin_writer.rs  data_type.rs  events.rs  external.rs  internal.rs  lib.rs  methods.rs  project_registry_writer.rs  round_writer.rs  storage.rs  storage_key.rs  test.rs  token_writer.rs  validation.rs  wasm_writer.rs
stellar/contract/round/src/: admin_writer.rs  application_writer.rs  approval_writer.rs  calculation.rs  config_writer.rs  core.rs  data_type.rs  deposit_writer.rs  error.rs  events.rs  external.rs  factory.rs  fee_writer.rs  funding_writer.rs  internal.rs  lib.rs  methods.rs  owner_writer.rs  page_writer.rs  pair.rs  payout_writer.rs  project_registry_writer.rs  round_writer.rs  storage.rs  storage_key.rs  test.rs  token_writer.rs  utils.rs  validation.rs  voter_writer.rs  voting_writer.rs
stellar/frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts
stellar/frontend/.husky/: pre-commit
stellar/frontend/grantpicks-frontend/src/configs/: local-storage.ts
stellar/frontend/grantpicks-frontend/src/utils/: helper.ts
stellar/frontend/lists-client/: README.md  package-lock.json  package.json
stellar/frontend/lists-client/src/: index.ts
stellar/frontend/project-registry-client/: README.md  package-lock.json  package.json
stellar/frontend/project-registry-client/src/: index.ts
stellar/frontend/round-client/: README.md  package-lock.json  package.json  tsconfig.json
stellar/frontend/round-client/src/: index.ts
stellar/frontend/src/: middleware.ts
stellar/frontend/src/app/: globals.css  layout.tsx  page.tsx
stellar/frontend/src/app/(lists)/create/: page.tsx
stellar/frontend/src/app/(lists)/lists/: page.tsx
stellar/frontend/src/app/application/: page.tsx
stellar/frontend/src/app/application/create-round/: page.tsx
stellar/frontend/src/app/application/my-project/: page.tsx
stellar/frontend/src/app/contexts/: ModalContext.ts  WalletContext.ts
stellar/frontend/src/app/lists/: page.tsx
stellar/frontend/src/app/privacy-policy/: page.tsx
stellar/frontend/src/app/providers/: GlobalProvider.tsx  ModalProvider.tsx  WalletProvider.tsx  index.tsx
stellar/frontend/src/app/rounds/: page.tsx
stellar/frontend/src/app/terms/: page.tsx
stellar/frontend/src/configs/: env-var.ts  local-storage.ts  service.ts
stellar/frontend/src/constants/: near.ts  on-chain.ts  project.ts  query.ts  regex.ts  round.ts  style.ts
stellar/frontend/src/lib/: contracts.ts  pair.ts  wallet.ts
stellar/frontend/src/models/: application.ts  payout.ts  project.ts  response.ts  round.ts  stats.ts  user.ts  voting.ts
stellar/frontend/src/services/: base.ts  common.ts  pinata.ts  potlock.tsx  upload.ts
stellar/frontend/src/services/near/: contract.ts  lists.ts  near-social.ts  round.ts  type.ts
stellar/frontend/src/services/on-chain/: project-registry.ts  round-factory.ts  round.ts
stellar/frontend/src/services/stellar/: list.ts  project-registry.ts  round.ts  type.ts
stellar/frontend/src/stores/zustand/: useAppStorage.ts  useRoundStore.tsx
stellar/frontend/src/types/: account.ts  application.ts  button.ts  context.ts  dialog.ts  form.ts  icon.ts  list-form.ts  menu.ts  on-chain.ts  project.ts  round.ts  services.ts
stellar/frontend/src/utils/: helper.ts
stellar/frontend/to/project-registry-client/: package-lock.json
(+213 files in other folders)
