[workspace]
members = ["./contract/project-registry","./contract/round","./contract/lists"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.7.6"
soroban-token-sdk = "21.7.6"


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = false
