[package]
name = "project-registry"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-alloc"] }

[dev_dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils", "soroban-sdk-alloc"] }

[features]
testutils = ["loam-sdk/soroban-sdk-testutils"]

[package.metadata.loam]
contract = true
