[package]
name = "round"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-alloc"] }
smartdeploy-sdk = "0.1.5"
soroban-token-sdk = { workspace = true }

[dev_dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils", "soroban-sdk-alloc"] }

[features]
testutils = ["loam-sdk/soroban-sdk-testutils"]

[package.metadata.loam]
contract = true
