[package]
name = "round"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-alloc"] }
soroban-token-sdk = { workspace = true }

[dev-dependencies]
loam-sdk = { workspace = true, features = ["soroban-sdk-testutils", "soroban-sdk-alloc"] }

[features]
testutils = ["loam-sdk/soroban-sdk-testutils"]

[package.metadata.loam]
contract = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true